[package]
name = "port-mapping"
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["share121 <2854631158@qq.com>"]
repository = "https://github.com/share121/port-mapping"
readme = "README.md"
exclude = ["/.github"]
description = "简单的映射端口程序"
documentation = "https://docs.rs/port-mapping"
homepage = "https://github.com/share121/port-mapping"
keywords = ["port", "mapping", "tokio", "concurrency", "performance"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1.45.1", default-features = false, features = [
  "fs",
  "io-util",
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
